tests/api/reference/negative/14-match-invalid-piece.asm
const invalid: map = match.tokens("literal", "literal")
